cabal-version:      2.4
name:               capon
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         telpenarmo@protonmail.com
author:             Telpenarmo
synopsis:           CoC-driven proof assistant
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: git://github.com/Telpenarmo/capon.git

library
    exposed-modules:
        Capon.Ast,
        Capon.Parser,
        Capon.TacticParser,
        Capon.Context,
        Capon.Types,
        Capon.Typechecker,
        Capon.Proof,
        Capon.Pretty
    other-modules:
        Capon.Lexer
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings,
        FlexibleContexts,
        LambdaCase
    build-depends:
        base >=4.14.2.0 && <=4.17,
        containers >= 0.6.4 && <= 0.6.5,
        mtl >= 2.2 && <= 2.3,
        text >= 1.2.4 && <= 1.3,
        megaparsec >=9.2 && <=9.3,
        pretty >= 1.1.3 && <= 1.2,
        parser-combinators >=1.3

executable capon
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings,
        FlexibleContexts,
        LambdaCase
    other-modules:
        Console,
        Handlers
    build-depends:
        base ^>=4.14.2.0,
        text,
        mtl,
        ansi-terminal >= 0.11,
        repline,
        capon -any

test-suite capon-test
    type:             exitcode-stdio-1.0
    main-is:          MyLibTest.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:    base ^>=4.14.2.0
